Initial component experiment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     ".api/v1.7.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/@types/d3/index.d.ts",
+    "src/components.ts",
+    "src/ganttComponents.ts",
+    "src/d3Append.ts",
     "src/settings.ts",
     "src/interfaces.ts",
     "src/colorizer.ts",
