Update d3-components, use better-encapsulated logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,7 @@
   "files.eol": "\n",
   "files.watcherExclude": {
     "**/.git/objects/**": true,
-    "**/node_modules/**": true,
-    ".tmp": true
-  },
-  "files.exclude": {
-    ".tmp": true
+    "**/node_modules/**": true
   },
   "search.exclude": {
     ".tmp": true,
