--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,12 @@
     ".api/v1.7.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/@types/d3/index.d.ts",
+    "src/dataProcessor.ts",
     "src/ganttComponents.tsx",
-    "src/d3Append.ts",
+    "src/gantt.tsx",
     "src/settings.ts",
     "src/interfaces.ts",
     "src/colorizer.ts",
-    "src/render.tsx",
     "src/visual.ts"
   ]
 }
