--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
     ".api/v1.7.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/@types/d3/index.d.ts",
+    "src/data/dateUtils.ts",
     "src/data/convertCategoricalDataView.ts",
     "src/data/DataViewConverter.ts",
-    "src/chart/ganttComponents.tsx",
+    "src/chart/components.tsx",
     "src/chart/colorizer.ts",
     "src/chart/gantt.tsx",
     "src/chart/interfaces.ts",
