--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "powerbi-visual-heat-streams",
+  "name": "essex-visual-heat-streams",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "start": "pbiviz start",
