Break up the data processing a bit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "node_modules/@types/d3/index.d.ts",
     "src/data/dateUtils.ts",
     "src/data/convertCategoricalDataView.ts",
+    "src/data/coalesceValueSlices.ts",
+    "src/data/sortCategories.ts",
+    "src/data/determinePositionDomain.ts",
     "src/data/DataViewConverter.ts",
     "src/chart/components.tsx",
     "src/chart/colorizer.ts",
