--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   ],
   "dependencies": {
+    "@essex/d3-coloring-scales": "^1.1.3",
     "@types/d3": "^4.9.0",
     "@types/node": "^8.0.25",
     "d3": "^4.9.1",
