--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "EditorConfig.EditorConfig",
         "msjsdiag.debugger-for-chrome",
-        "eg2.tslint"
+        "eg2.tslint",
+        "esbenp.prettier-vscode"
     ]
 }
