--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
     "d3-scale-chromatic": "^1.1.1",
+    "debug": "^3.1.0",
     "lodash": "^4.17.4",
     "powerbi-models": "^0.11.3",
     "powerbi-visuals-utils-dataviewutils": "^1.2.0",
