Add babel-polyfill for IE11 Support

--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "trailingComma": "all",
     "semi": false,
     "useTabs": true
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
