--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -15,8 +15,8 @@
     "email": "msrvizsupport@microsoft.com"
   },
   "devDependencies": {
-    "typescript": "^2.5.3",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "typescript": "^2.5.3"
   },
   "peerDependencies": {
     "react": "*"
