--- a/packages/powerbi-heat-streams/package.json
+++ b/packages/powerbi-heat-streams/package.json
@@ -16,8 +16,13 @@
   "dependencies": {
     "@essex/d3-coloring-scales": "^1.1.6",
     "@essex/react-heat-streams": "1.0.1",
+    "@types/object-assign": "^4.0.30",
+    "core-js": "^2.5.1",
     "debug": "^3.1.0",
+    "es6-promise": "^4.1.1",
+    "es6-object-assign": "^1.1.0",
     "lodash": "^4.17.4",
+    "object-assign": "^4.1.1",
     "powerbi-models": "^0.11.3",
     "powerbi-visuals-utils-dataviewutils": "^1.2.0",
     "powerbi-visuals-utils-svgutils": "^1.1.0",
