--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -25,6 +25,7 @@
     "@essex/d3-coloring-scales": "^1.1.3",
     "d3-color": "^1.0.3",
     "d3-scale": "^1.0.6",
+    "is-integer": "^1.0.7",
     "prop-types": "^15.6.0",
     "react-d3-axis": "^0.1.1"
   }
