--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "lerna": "2.4.0",
   "npmClient": "yarn",
-  "workspaces": [
-    "packages/*"
-  ],
-  "version": null
+  "version": null,
+  "useWorkspaces": true
 }
