--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "postinstall": "npm run bootstrap",
     "clean": "lerna run clean --stream",
     "package": "lerna run package --stream",
     "start": "lerna run start --no-sort --concurrency 2 --stream",
@@ -24,21 +22,18 @@
       "email": "chtrevin@microsoft.com"
     }
   ],
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/d3": "3.x",
-    "@types/node": "^8.0.34",
-    "@types/react": "^16.0.10",
-    "@types/react-dom": "^16.0.1",
     "cross-env": "^5.0.5",
     "husky": "^0.14.3",
     "lerna": "^2.4.0",
     "lint-staged": "^4.2.3",
     "npm-run-all": "^4.1.1",
-    "powerbi-visuals-tools": "^1.7.2",
     "prettier": "^1.7.4",
-    "rimraf": "^2.6.2",
     "tslint": "^5.0.0-dev.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.6.2"
   },
   "lint-staged": {
     "*[!.d].{ts,tsx}": [
@@ -52,8 +47,5 @@
     "trailingComma": "all",
     "semi": false,
     "useTabs": true
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0"
   }
 }
