--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -16,12 +16,16 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "typescript": "^2.5.3"
+    "typescript": "^2.6.2"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "15.x"
   },
   "dependencies": {
+    "@types/d3": "3.x",
+    "@types/node": "^8.0.34",
+    "@types/react": "^15.0.10",
+    "@types/react-dom": "^15.0.1",
     "@essex/d3-coloring-scales": "^1.1.3",
     "d3-color": "^1.0.3",
     "d3-scale": "^1.0.6",
