--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint 'packages/*/**/*.{ts,tsx}' -e '**/{node_modules,dist,lib}/**' -e '**/*.d.ts'",
     "precommit": "lint-staged",
     "format": "prettier --write \"src/**/*.ts*\"",
-    "test": "cross-env NODE_ENV=production npm-run-all build package"
+    "test": "cross-env NODE_ENV=production run-s lint build package"
   },
   "author": {
     "name": "Microsoft (experimental)",
@@ -26,14 +26,14 @@
     "packages/*"
   ],
   "devDependencies": {
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.5",
     "husky": "^0.14.3",
-    "lerna": "^2.4.0",
-    "lint-staged": "^4.2.3",
-    "npm-run-all": "^4.1.1",
-    "prettier": "^1.7.4",
-    "tslint": "^5.0.0-dev.0",
-    "typescript": "^2.6.2"
+    "lerna": "^2.11.0",
+    "lint-staged": "^7.1.2",
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.12.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.8.3"
   },
   "lint-staged": {
     "*[!.d].{ts,tsx}": [
@@ -47,5 +47,10 @@
     "trailingComma": "all",
     "semi": false,
     "useTabs": true
+  },
+  "dependencies": {
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-react": "^3.6.0",
+    "tslint-react-perf": "^0.2.1"
   }
 }
