--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -16,21 +16,23 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "typescript": "^2.6.2"
+    "typescript": "^2.8.3"
   },
   "peerDependencies": {
-    "react": "15.x"
+    "react": "^16.3.2"
   },
   "dependencies": {
-    "@essex/d3-coloring-scales": "^1.1.3",
-    "@types/d3": "3.x",
-    "@types/node": "^8.0.34",
-    "@types/react": "^15.0.10",
-    "@types/react-dom": "^15.0.1",
-    "d3-color": "^1.0.3",
-    "d3-scale": "^1.0.6",
+    "@essex/d3-coloring-scales": "^2.0.0",
+    "@types/d3-color": "^1.2.1",
+    "@types/d3-scale": "^2.0.0",
+    "@types/node": "^10.1.2",
+    "@types/react": "^16.3.14",
+    "@types/react-dom": "^16.0.5",
+    "autobind-decorator": "^2.1.0",
+    "d3-color": "^1.2.0",
+    "d3-scale": "^2.0.0",
     "is-integer": "^1.0.7",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react-d3-axis": "^0.1.1"
   }
 }
