--- a/package.json
+++ b/package.json
@@ -1,55 +1,73 @@
 {
-  "name": "@essex/heat-streams",
-  "private": true,
-  "license": "MIT",
-  "scripts": {
-    "clean": "lerna run clean --stream",
-    "start": "lerna run start --no-sort --concurrency 2 --stream",
-    "build": "lerna run build --stream",
-    "lint": "tslint 'packages/*/**/*.{ts,tsx}' -e '**/{node_modules,dist,lib}/**' -e '**/*.d.ts'",
-    "precommit": "lint-staged",
-    "format": "prettier --write \"src/**/*.ts*\"",
-    "test": "cross-env NODE_ENV=production run-s lint build package"
+	"name": "@essex/heat-streams",
+	"private": true,
+	"license": "MIT",
+	"scripts": {
+		"clean": "lerna run clean --stream",
+		"start": "lerna run start --no-sort --concurrency 2 --stream",
+		"build": "lerna run build --stream",
+		"lint": "tslint 'packages/*/**/*.{ts,tsx}' -e '**/{node_modules,dist,lib}/**' -e '**/*.d.ts'",
+		"precommit": "lint-staged",
+		"format": "prettier --write \"src/**/*.ts*\"",
+		"test": "cross-env NODE_ENV=production run-s clean lint build"
+	},
+	"author": {
+		"name": "Microsoft (experimental)",
+		"email": "msrvizsupport@microsoft.com"
+	},
+	"contributors": [
+		{
+			"name": "Chris Trevino",
+			"email": "chtrevin@microsoft.com"
+		}
+	],
+	"workspaces": {
+		"packages": [
+			"packages/*"
+		],
+		"nohoist": [
+			"**"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"devDependencies": {
+		"cross-env": "^5.2.0",
+		"husky": "^1.2.0",
+		"lerna": "^3.4.3",
+		"lint-staged": "^8.1.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^1.15.2",
+		"tslint": "^5.11.0",
+		"typescript": "^3.1.6"
+	},
+	"lint-staged": {
+		"*[!.d].{ts,tsx}": [
+			"prettier --write",
+			"tslint --fix",
+			"git add"
+		]
+	},
+	"prettier": {
+		"singleQuote": true,
+		"trailingComma": "all",
+		"semi": false,
+		"useTabs": true
+	},
+	"dependencies": {
+		"@commitlint/cli": "^7.2.1",
+		"@commitlint/config-conventional": "^7.1.2",
+		"tslint-config-prettier": "^1.16.0",
+		"tslint-react": "^3.6.0",
+		"tslint-react-perf": "^0.2.1"
   },
-  "author": {
-    "name": "Microsoft (experimental)",
-    "email": "msrvizsupport@microsoft.com"
-  },
-  "contributors": [
-    {
-      "name": "Chris Trevino",
-      "email": "chtrevin@microsoft.com"
-    }
-  ],
-  "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "cross-env": "^5.1.5",
-    "husky": "^0.14.3",
-    "lerna": "^2.11.0",
-    "lint-staged": "^7.1.2",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.12.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
-  },
-  "lint-staged": {
-    "*[!.d].{ts,tsx}": [
-      "prettier --write",
-      "tslint --fix",
-      "git add"
-    ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "semi": false,
-    "useTabs": true
-  },
-  "dependencies": {
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-react": "^3.6.0",
-    "tslint-react-perf": "^0.2.1"
+  "resolutions": {
+    "**/@types/react-dom": "16.0.10",
+    "**/@types/react": "16.7.7",
+    "**/@types/d3-shape": "1.2.6"
   }
 }
