--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -16,23 +16,23 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.2",
-    "typescript": "^2.8.3"
+    "typescript": "^3.1.6"
   },
   "peerDependencies": {
-    "react": "^16.3.2"
+    "react": "^16.6.3"
   },
   "dependencies": {
     "@essex/d3-coloring-scales": "^2.0.0",
     "@types/d3-color": "^1.2.1",
-    "@types/d3-scale": "^2.0.0",
-    "@types/node": "^10.1.2",
-    "@types/react": "^16.3.14",
-    "@types/react-dom": "^16.0.5",
-    "autobind-decorator": "^2.1.0",
-    "d3-color": "^1.2.0",
-    "d3-scale": "^2.0.0",
+    "@types/d3-scale": "^2.0.2",
+    "@types/d3-shape": "1.2.6",
+    "@types/node": "^10.12.10",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10",
+    "autobind-decorator": "^2.3.1",
+    "d3-color": "^1.2.3",
+    "d3-scale": "^2.1.2",
     "is-integer": "^1.0.7",
-    "prop-types": "^15.6.1",
     "react-d3-axis": "^0.1.1"
   }
 }
