--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -27,8 +27,8 @@
     "@types/d3-scale": "^2.0.2",
     "@types/d3-shape": "1.2.6",
     "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
+    "@types/react": "16.7.7",
+    "@types/react-dom": "16.0.10",
     "autobind-decorator": "^2.3.1",
     "d3-color": "^1.2.3",
     "d3-scale": "^2.1.2",
