--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 		"clean": "lerna run clean --stream",
 		"start": "lerna run start --no-sort --concurrency 2 --stream",
 		"build": "lerna run build --stream",
-		"lint": "tslint 'packages/*/**/*.{ts,tsx}' -e '**/{node_modules,dist,lib}/**' -e '**/*.d.ts'",
 		"precommit": "lint-staged",
 		"format": "prettier --write \"src/**/*.ts*\"",
 		"test": "cross-env NODE_ENV=production run-s clean lint build"
@@ -36,14 +35,31 @@
 		}
 	},
 	"devDependencies": {
-		"cross-env": "^5.2.0",
-		"husky": "^1.2.0",
-		"lerna": "^3.4.3",
-		"lint-staged": "^8.1.0",
+		"@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^8.3.5",
+		"@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "@babel/core": "^7.8.4",
+    "@babel/cli": "^7.8.4",
+		"cross-env": "^7.0.0",
+		"eslint-config-react-app": "^5.2.0",
+		"eslint-plugin-header": "^3.0.0",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jest": "^23.6.0",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-react": "^7.18.3",
+		"husky": "^4.2.1",
+		"lerna": "^3.20.2",
+		"lint-staged": "^10.0.7",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^1.15.2",
-		"tslint": "^5.11.0",
-		"typescript": "^3.1.6"
+		"prettier": "^1.19.1",
+		"typescript": "^3.7.5",
+    "babel-eslint": "^10.0.3",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint": "^6.8.0",
+    "rimraf": "^3.0.1"
 	},
 	"lint-staged": {
 		"*[!.d].{ts,tsx}": [
@@ -58,13 +74,6 @@
 		"semi": false,
 		"useTabs": true
 	},
-	"dependencies": {
-		"@commitlint/cli": "^7.2.1",
-		"@commitlint/config-conventional": "^7.1.2",
-		"tslint-config-prettier": "^1.16.0",
-		"tslint-react": "^3.6.0",
-		"tslint-react-perf": "^0.2.1"
-  },
   "resolutions": {
     "**/@types/react-dom": "16.0.10",
     "**/@types/react": "16.7.7",
