--- a/packages/powerbi-heat-streams/package.json
+++ b/packages/powerbi-heat-streams/package.json
@@ -18,26 +18,24 @@
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@essex/react-heat-streams": "^1.1.4",
 		"@types/object-assign": "^4.0.30",
-		"@types/react": "16.7.7",
-		"@types/react-dom": "16.0.10",
-		"debug": "^4.1.0",
+		"@types/react": "^16.9.19",
+		"@types/react-dom": "^16.9.5",
+		"debug": "^4.1.1",
 		"es6-object-assign": "^1.1.0",
-		"es6-promise": "^4.2.5",
-		"lodash": "^4.17.11",
+		"es6-promise": "^4.2.8",
+		"lodash": "^4.17.15",
 		"object-assign": "^4.1.1",
-		"powerbi-models": "^1.0.13",
+		"powerbi-models": "^1.3.2",
 		"powerbi-visuals-tools": "^1.12.0",
 		"powerbi-visuals-utils-dataviewutils": "^1.4.1",
 		"powerbi-visuals-utils-svgutils": "^1.1.0",
 		"powerbi-visuals-utils-typeutils": "^1.1.0",
-		"react": "^16.6.3",
-		"react-dom": "^16.6.3"
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0"
 	},
 	"devDependencies": {
 		"@essex/powerbi-visual-scripts": "^3.0.1",
-		"cross-env": "^5.2.0",
-		"powerbi-visuals-tools": "^1.12.0",
-		"rimraf": "^2.6.2",
-		"typescript": "^3.1.6"
+		"cross-env": "^7.0.0",
+		"powerbi-visuals-tools": "^1.12.0"
 	}
 }
