--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -6,7 +6,7 @@
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
 	"scripts": {
-		"clean": "rimraf lib",
+		"clean": "rimraf lib dist",
 		"build": "tsc",
 		"start": "tsc -w"
 	},
@@ -15,24 +15,22 @@
 		"email": "msrvizsupport@microsoft.com"
 	},
 	"devDependencies": {
-		"rimraf": "^2.6.2",
-		"typescript": "^3.1.6"
+		"@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/d3-color": "^1.2.2",
+		"@types/d3-scale": "^2.1.1",
+		"@types/d3-shape": "^1.3.2",
+		"@types/node": "^13.7.0"		
 	},
 	"peerDependencies": {
 		"react": "^16.6.3"
 	},
 	"dependencies": {
-		"@essex/d3-coloring-scales": "^2.0.0",
-		"@types/d3-color": "^1.2.1",
-		"@types/d3-scale": "^2.0.2",
-		"@types/d3-shape": "1.2.6",
-		"@types/node": "^10.12.10",
-		"@types/react": "16.7.7",
-		"@types/react-dom": "16.0.10",
-		"autobind-decorator": "^2.3.1",
-		"d3-color": "^1.2.3",
-		"d3-scale": "^2.1.2",
+		"@essex/d3-coloring-scales": "^3.0.0",		
+		"autobind-decorator": "^2.4.0",
+		"d3-color": "^1.4.0",
+		"d3-scale": "^3.2.1",
 		"is-integer": "^1.0.7",
-		"react-d3-axis": "^0.1.1"
+		"react-d3-axis": "^0.1.2"
 	}
 }
