build: add babel conversions

--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
     "@commitlint/cli": "^8.3.5",
 		"@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "@babel/core": "^7.8.4",
     "@babel/cli": "^7.8.4",
+		"@babel/core": "^7.8.4",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+		"@babel/plugin-proposal-optional-chaining": "^7.8.3",
+		"@babel/plugin-transform-react-jsx": "^7.8.3",
+		"@babel/preset-env": "^7.8.4",
 		"cross-env": "^7.0.0",
 		"eslint-config-react-app": "^5.2.0",
 		"eslint-plugin-header": "^3.0.0",
