--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -3,11 +3,15 @@
 	"version": "1.1.4",
 	"private": true,
 	"license": "MIT",
-	"main": "lib/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
 	"types": "lib/index.d.ts",
 	"scripts": {
-		"clean": "rimraf lib dist",
-		"build": "tsc",
+    "build:tsc": "tsc",
+    "build:babel:esm": "babel --config-file ../../babelrc.esm.js -d dist/esm 'lib/**/*.js'",
+    "build:babel:cjs": "babel --config-file ../../babelrc.cjs.js -d dist/cjs 'lib/**/*.js'",
+    "build": "npm-run-all -s build:tsc -p build:babel:*",
+		"clean": "rimraf lib dist",		
 		"start": "tsc -w"
 	},
 	"author": {
