--- a/package.json
+++ b/package.json
@@ -35,18 +35,22 @@
 		}
 	},
 	"devDependencies": {
-		"@commitlint/config-conventional": "^8.3.4",
-    "@commitlint/cli": "^8.3.5",
-		"@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "@babel/cli": "^7.8.4",
+		"@babel/cli": "^7.8.4",
 		"@babel/core": "^7.8.4",
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/plugin-proposal-object-rest-spread": "^7.8.3",
 		"@babel/plugin-proposal-optional-chaining": "^7.8.3",
 		"@babel/plugin-transform-react-jsx": "^7.8.3",
 		"@babel/preset-env": "^7.8.4",
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-conventional": "^8.3.4",
+		"@typescript-eslint/eslint-plugin": "^2.19.0",
+		"@typescript-eslint/parser": "^2.19.0",
+		"babel-eslint": "^10.0.3",
+		"core-js": "3",
 		"cross-env": "^7.0.0",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.10.0",
 		"eslint-config-react-app": "^5.2.0",
 		"eslint-plugin-header": "^3.0.0",
 		"eslint-plugin-import": "^2.20.1",
@@ -54,17 +58,14 @@
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-react": "^7.18.3",
+		"eslint-plugin-react-hooks": "^2.3.0",
 		"husky": "^4.2.1",
 		"lerna": "^3.20.2",
 		"lint-staged": "^10.0.7",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^1.19.1",
-		"typescript": "^3.7.5",
-    "babel-eslint": "^10.0.3",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint": "^6.8.0",
-    "rimraf": "^3.0.1"
+		"rimraf": "^3.0.1",
+		"typescript": "^3.7.5"
 	},
 	"lint-staged": {
 		"*[!.d].{ts,tsx}": [
