--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"clean": "lerna run clean --stream",
 		"start": "lerna run start --no-sort --concurrency 2 --stream",
 		"build": "lerna run build --stream",
+		"lint": "eslint . --ext .js,.ts,.jsx,.tsx",
 		"precommit": "lint-staged",
 		"format": "prettier --write \"src/**/*.ts*\"",
 		"test": "cross-env NODE_ENV=production run-s clean lint build"
@@ -52,6 +53,7 @@
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-config-react-app": "^5.2.0",
+		"eslint-plugin-flowtype": "^4.6.0",
 		"eslint-plugin-header": "^3.0.0",
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-jest": "^23.6.0",
