--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -24,10 +24,11 @@
     "@types/d3-color": "^1.2.2",
 		"@types/d3-scale": "^2.1.1",
 		"@types/d3-shape": "^1.3.2",
-		"@types/node": "^13.7.0"		
+    "@types/node": "^13.7.0",
+    "react": "^16.12.0"
 	},
 	"peerDependencies": {
-		"react": "^16.6.3"
+		"react": ">= 16.12"
 	},
 	"dependencies": {
 		"@essex/d3-coloring-scales": "^3.0.0",		
