--- a/package.json
+++ b/package.json
@@ -66,13 +66,16 @@
 		"lint-staged": "^10.0.7",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^1.19.1",
+		"pretty-quick": "^2.0.1",
 		"rimraf": "^3.0.1",
 		"typescript": "^3.7.5"
 	},
 	"lint-staged": {
-		"*[!.d].{ts,tsx}": [
-			"prettier --write",
-			"tslint --fix"
+		"**/*": [
+			"pretty-quick --staged"
+		],
+		"**/*.{js,jsx,ts,tsx}": [
+			"eslint --fix"
 		]
 	},
 	"prettier": {
