--- a/packages/powerbi-heat-streams/package.json
+++ b/packages/powerbi-heat-streams/package.json
@@ -17,14 +17,12 @@
 	"dependencies": {
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@essex/react-heat-streams": "^1.1.4",
-		"@types/object-assign": "^4.0.30",
+		"@types/d3-array": "^2.0.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
+		"d3-array": "^2.4.0",
 		"debug": "^4.1.1",
-		"es6-object-assign": "^1.1.0",
-		"es6-promise": "^4.2.8",
 		"lodash": "^4.17.15",
-		"object-assign": "^4.1.1",
 		"powerbi-models": "^1.3.2",
 		"powerbi-visuals-utils-dataviewutils": "^2.2.1",
 		"powerbi-visuals-utils-svgutils": "^2.2.1",
