--- a/packages/derp/package.json
+++ b/packages/derp/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "visual",
+	"license": "MIT",
 	"scripts": {
 		"pbiviz": "pbiviz",
 		"start": "pbiviz start",
@@ -15,6 +16,7 @@
 		"debug": "^4.1.1",
 		"lodash": "^4.17.15",
 		"powerbi-models": "^1.3.2",
+		"powerbi-visuals-api": "^2.6.1",
 		"powerbi-visuals-utils-dataviewutils": "^2.2.1",
 		"powerbi-visuals-utils-svgutils": "^2.2.1",
 		"powerbi-visuals-utils-typeutils": "^2.2.1",
