--- a/packages/powerbi-heat-streams-2/package.json
+++ b/packages/powerbi-heat-streams-2/package.json
@@ -3,6 +3,7 @@
 	"license": "MIT",
 	"scripts": {
 		"pbiviz": "pbiviz",
+		"clean": "rimraf .tmp dist",
 		"start": "pbiviz start",
 		"build": "pbiviz package"
 	},
@@ -10,6 +11,7 @@
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@essex/react-heat-streams": "^1.1.4",
 		"@types/d3-array": "^2.0.0",
+		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
 		"d3-array": "^2.4.0",
