--- a/packages/powerbi-heat-streams-2/tsconfig.json
+++ b/packages/powerbi-heat-streams-2/tsconfig.json
@@ -1,6 +1,8 @@
 {
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"allowJs": false,
+		"noImplicitAny": false,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"target": "es6",
