--- a/packages/powerbi-heat-streams/package.json
+++ b/packages/powerbi-heat-streams/package.json
@@ -18,6 +18,7 @@
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@essex/react-heat-streams": "^1.1.4",
 		"@types/d3-array": "^2.0.0",
+		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
 		"d3-array": "^2.4.0",
