refactor: use named exports

--- a/packages/powerbi-heat-streams/package.json
+++ b/packages/powerbi-heat-streams/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "visual",
+	"name": "@essex/powerbi-visual-heat-streams",
+	"private": true,
 	"license": "MIT",
 	"scripts": {
 		"pbiviz": "pbiviz",
