--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
 	"workspaces": {
 		"packages": [
 			"packages/*"
-		]
+    ],
+    "nohoist": [
+      "@essex/powerbi-visual-heat-streams/**"
+    ]
 	},
 	"husky": {
 		"hooks": {
