--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -21,6 +21,10 @@
     "email": "msrvizsupport@microsoft.com"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.13",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/core": "^5.3.13",
     "@storybook/react": "^5.3.13",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
@@ -29,7 +33,9 @@
     "@types/d3-scale": "^2.1.1",
     "@types/d3-shape": "^1.3.2",
     "@babel/core": "^7.8.4",
+    "@babel/polyfill": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "regenerator-runtime": "^0.13.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "webpack": "^4.41.6"
