--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -26,6 +26,7 @@
     "@storybook/addon-links": "^5.3.13",
     "@storybook/core": "^5.3.13",
     "@storybook/react": "^5.3.13",
+    "@storybook/preset-typescript": "^1.2.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
