--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -39,6 +39,8 @@
     "regenerator-runtime": "^0.13.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.6"
   },
   "peerDependencies": {
