--- a/packages/react-heat-streams-stories/package.json
+++ b/packages/react-heat-streams-stories/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-heat-streams",
+	"name": "react-heat-streams-stories",
 	"version": "1.1.4",
 	"private": true,
 	"license": "MIT",
@@ -12,25 +12,43 @@
 		"build:babel:cjs": "babel --config-file ../../babelrc.cjs.js -d dist/cjs lib",
 		"build": "npm-run-all -s build:tsc -p build:babel:*",
 		"clean": "rimraf lib dist",
-		"start": "tsc -w"
+		"start": "tsc -w",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
 	"author": {
 		"name": "Microsoft (experimental)",
 		"email": "msrvizsupport@microsoft.com"
 	},
 	"devDependencies": {
+		"@storybook/addon-a11y": "^5.3.13",
+		"@storybook/addon-actions": "^5.3.13",
+		"@storybook/addon-links": "^5.3.13",
+		"@storybook/core": "^5.3.13",
+		"@storybook/react": "^5.3.13",
+		"@storybook/preset-typescript": "^1.2.0",
 		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
 		"@types/d3-color": "^1.2.2",
 		"@types/d3-scale": "^2.1.1",
 		"@types/d3-shape": "^1.3.2",
-		"react": "^16.12.0"
+		"@babel/core": "^7.8.4",
+		"@babel/polyfill": "^7.8.3",
+		"babel-loader": "^8.0.6",
+		"regenerator-runtime": "^0.13.3",
+		"react": "^16.12.0",
+		"react-docgen-typescript-loader": "^3.6.0",
+		"react-dom": "^16.12.0",
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.7.5",
+		"webpack": "^4.41.6"
 	},
 	"peerDependencies": {
 		"react": ">= 16.12"
 	},
 	"dependencies": {
+		"@essex/d3-coloring-scales": "^3.0.0",
 		"d3-color": "^1.4.0",
 		"d3-scale": "^3.2.1",
 		"react-d3-axis": "github:darthtrevino/react-d3-axis"
