--- a/packages/react-heat-streams-stories/package.json
+++ b/packages/react-heat-streams-stories/package.json
@@ -16,15 +16,13 @@
 		"@storybook/addon-a11y": "^5.3.13",
 		"@storybook/addon-actions": "^5.3.13",
 		"@storybook/addon-links": "^5.3.13",
+		"@storybook/addon-knobs": "^5.3.13",
 		"@storybook/core": "^5.3.13",
 		"@storybook/react": "^5.3.13",
 		"@storybook/preset-typescript": "^1.2.0",
 		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
-		"@types/d3-color": "^1.2.2",
-		"@types/d3-scale": "^2.1.1",
-		"@types/d3-shape": "^1.3.2",
 		"@babel/core": "^7.8.4",
 		"@babel/polyfill": "^7.8.3",
 		"babel-loader": "^8.0.6",
@@ -41,9 +39,6 @@
 	},
 	"dependencies": {
 		"react-heat-streams": "^1.1.4",
-		"@essex/d3-coloring-scales": "^3.0.0",
-		"d3-color": "^1.4.0",
-		"d3-scale": "^3.2.1",
-		"react-d3-axis": "github:darthtrevino/react-d3-axis"
+		"@essex/d3-coloring-scales": "^3.0.0"
 	}
 }
