--- a/packages/react-heat-streams-stories/package.json
+++ b/packages/react-heat-streams-stories/package.json
@@ -20,9 +20,6 @@
 		"@storybook/core": "^5.3.13",
 		"@storybook/react": "^5.3.13",
 		"@storybook/preset-typescript": "^1.2.0",
-		"@types/node": "^13.7.0",
-		"@types/react": "^16.9.19",
-		"@types/react-dom": "^16.9.5",
 		"@babel/core": "^7.8.4",
 		"@babel/polyfill": "^7.8.3",
 		"babel-loader": "^8.0.6",
@@ -38,7 +35,12 @@
 		"react": ">= 16.12"
 	},
 	"dependencies": {
-		"react-heat-streams": "^1.1.4",
-		"@essex/d3-coloring-scales": "^3.0.0"
+		"@essex/d3-coloring-scales": "^3.0.0",
+		"@types/d3-scale-chromatic": "^1.3.1",
+		"@types/node": "^13.7.0",
+		"@types/react-dom": "^16.9.5",
+		"@types/react": "^16.9.19",
+		"d3-scale-chromatic": "^1.5.0",
+		"react-heat-streams": "^1.1.4"
 	}
 }
