--- a/packages/react-heat-streams-stories/package.json
+++ b/packages/react-heat-streams-stories/package.json
@@ -13,20 +13,21 @@
 		"email": "msrvizsupport@microsoft.com"
 	},
 	"devDependencies": {
-		"@storybook/addon-a11y": "^5.3.13",
-		"@storybook/addon-actions": "^5.3.13",
-		"@storybook/addon-links": "^5.3.13",
-		"@storybook/addon-knobs": "^5.3.13",
-		"@storybook/core": "^5.3.13",
-		"@storybook/react": "^5.3.13",
-		"@storybook/preset-typescript": "^1.2.0",
 		"@babel/core": "^7.8.4",
 		"@babel/polyfill": "^7.8.3",
+		"@storybook/addon-a11y": "^5.3.13",
+		"@storybook/addon-actions": "^5.3.13",
+		"@storybook/addon-knobs": "^5.3.13",
+		"@storybook/addon-links": "^5.3.13",
+		"@storybook/core": "^5.3.13",
+		"@storybook/preset-typescript": "^1.2.0",
+		"@storybook/react": "^5.3.13",
 		"babel-loader": "^8.0.6",
-		"regenerator-runtime": "^0.13.3",
 		"react": "^16.12.0",
 		"react-docgen-typescript-loader": "^3.6.0",
 		"react-dom": "^16.12.0",
+		"react-scripts": "^3.4.0",
+		"regenerator-runtime": "^0.13.3",
 		"ts-loader": "^6.2.1",
 		"typescript": "^3.7.5",
 		"webpack": "^4.41.6"
@@ -38,8 +39,8 @@
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@types/d3-scale-chromatic": "^1.3.1",
 		"@types/node": "^13.7.0",
-		"@types/react-dom": "^16.9.5",
 		"@types/react": "^16.9.19",
+		"@types/react-dom": "^16.9.5",
 		"d3-scale-chromatic": "^1.5.0",
 		"react-heat-streams": "^1.1.4"
 	}
