--- a/packages/react-heat-streams/package.json
+++ b/packages/react-heat-streams/package.json
@@ -5,6 +5,9 @@
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "lib/index.d.ts",
+	"repository": {
+		"url": "https://github.com/microsoft/PowerBI-visuals-HeatStreams"
+	},
 	"scripts": {
 		"build:tsc": "tsc",
 		"build:babel:esm": "babel --config-file ../../babelrc.esm.js -d dist/esm lib",
