--- a/powerbi-heat-streams/package.json
+++ b/powerbi-heat-streams/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^16.12.0"
 	},
 	"devDependencies": {
-		"powerbi-visuals-tools": "^3.1.9"
+		"powerbi-visuals-tools": "^3.1.9",
+		"regenerator-runtime": "^0.13.3"
 	}
 }
