--- a/pbi-heat-streams/tsconfig.json
+++ b/pbi-heat-streams/tsconfig.json
@@ -1,16 +1,15 @@
 {
 	"compilerOptions": {
+		"jsx": "react",
 		"allowJs": false,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"forceConsistentCasingInFileNames": true,
 		"target": "es6",
-		"jsx": "react",
 		"sourceMap": true,
 		"outDir": "./.tmp/build/",
 		"moduleResolution": "node",
 		"declaration": true,
 		"lib": ["es2015", "dom"]
 	},
-	"files": ["./src/Visual.ts"]
+	"files": ["./src/visual.ts"]
 }
