build: use CI script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "lerna run build --stream",
 		"lint": "eslint . --ext .js,.ts,.jsx,.tsx",
 		"check_formatting": "pretty-quick --check",
-		"ci": "NODE_ENV=production npm-run-all clean -p lint check_formatting -s build",
+		"ci": "./scripts/ci.sh",
 		"precommit": "lint-staged",
 		"release": "lerna publish"
 	},
